# GoIt_Web_HW

./: Dockerfile  LICENSE  addressbook.pkl  notebook.pkl  pyproject.toml  requirements.txt  setup.py
FriendlyHandbook/: .gitignore  Dockerfile  README.md  adbook.py  calculator.py  main.py  note_book.py  setup.py  sort_folder.py
FriendlyHandbook/FriendlyHandbook/: adbook.py  main.py  note_book.py
HW_1/: UML.drawio
