[tool.poetry]
name = "goit-web-hw"
version = "0.1.0"
description = ""
authors = ["filinmbg <filinmbg@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
prompt-toolkit = "^3.0.39"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
